--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: obo_mobile
-description: "OBO Office of Building Official Mobile Application"
+description: "OBO Office of Building Official Inspector Mobile Application"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # HTTP requests
+  http: ^1.1.0
+  
+  # Local storage for session management
+  shared_preferences: ^2.2.2
+  
+  # Hive database for offline storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  
+  # Connectivity checking
+  connectivity_plus: ^5.0.2
+  
+  # JSON serialization
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +63,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  
+  # JSON serialization code generation
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.7
+  
+  # Hive code generation
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +83,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
