--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,17 @@ dependencies:
   
   # JSON serialization
   json_annotation: ^4.8.1
+  
+  # Permissions
+  permission_handler: ^11.0.1
+  
+  # QR Code Scanner
+  mobile_scanner: ^5.0.0
+  
+  # Map integration
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.1
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -70,10 +81,19 @@ dev_dependencies:
   
   # Hive code generation
   hive_generator: ^2.0.1
+  
+  # App icon generation
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/ormoc_seal.png"
+  remove_alpha_ios: true
+  remove_alpha_android: true
+  
 # The following section is specific to Flutter packages.
 flutter:
 
