--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "my_first_app",
-    "short_name": "my_first_app",
+    "name": "OBO Mobile",
+    "short_name": "OBO Mobile",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "OBO Office of Building Official Inspector Mobile Application",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
