--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,15 @@
+# Optimized Gradle settings for faster builds
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+
+# Android settings
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Build optimizations
+android.enableR8.fullMode=true
+android.enableD8.desugaring=true
+android.enableBuildCache=true
